# nix-remote-builder-doctor

./: .gitignore  CHANGELOG.org  CONTRIBUTING.org  Cargo.toml  README.org  derivation.nix  flake.nix  justfile  llms.org  mit-license.txt  module-usage.md  nixos-module.nix  rust-template.json  treefmt.toml
.claude/: settings.json
.claude/agents/: template-compliance.md
.claude/hooks/: stop-review.sh
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs
crates/cli/tests/: integration_test.rs
crates/cli/tests/common/: mod.rs
crates/lib/: Cargo.toml
crates/lib/src/: age.rs  command.rs  connection_test.rs  dns_test.rs  dns_utils.rs  error.rs  host_key_test.rs  lib.rs  local_to_remote_build_test.rs  machine.rs  matching_keys_test.rs  nix_store_permission_test.rs  output.rs  output_tests.rs  remote_build_test.rs  ssh.rs  ssh2_adapter.rs  ssh_utils.rs  test.rs  test_helpers.rs
nix/modules/: common.nix  darwin.nix  nixos.nix
src/: age.rs  cli.rs  command.rs  connection_test.rs  dns_test.rs  dns_utils.rs  error.rs  host_key_test.rs  lib.rs  local_to_remote_build_test.rs  logger.rs  machine.rs  main.rs  matching_keys_test.rs  nix_store_permission_test.rs  output.rs  output_tests.rs  remote_build_test.rs  russh.rs  ssh.rs  ssh2_adapter.rs  ssh_home.rs  ssh_utils.rs  test.rs  test_helpers.rs
tests/: integration_test.rs
tests/common/: mod.rs
