[package]
name = "nix-remote-builder-doctor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See https://doc.rust-lang.org/cargo/reference/profiles.html for more about
# these build profiles.
[profile.dev]
# Prevent 36GB target/debug directories.
debug = false

[dependencies]
# Encode and decode base64 strings.
base64 = "0.22.1"
# Command line argument parsing.
clap = { version = "4.5.7", features = ["env", "derive", "wrap_help"] }
# Allow us to derive verbosity from command line arguments.
clap-verbosity-flag = "2.2.0"
lazy_static = "1.5.0"
# A generalized logger.
log = "0.4.21"
nix = { version = "0.29.0", features = ["signal"] }
# Pretty terminal colors.
owo-colors = "4.0.0"
# Give us functional programming partial application.
partial_application = "0.2.1"
# Handle regular expressions.
regex = "1.10.5"
# russh = { version = "0.43.0", features = ["openssl"] }
# ssh2 = { version = "0.9.4" }
# Establish and use SSH connections.
ssh2 = { git = "https://github.com/Jeidnx/ssh2-rs.git" }
# Send our logs to stderr to unclutter stdout's actual output.
stderrlog = "0.6.0"
# Err, what did I get this for?  It displays or helps display things.
strum = { version = "0.26.2", features = [ "derive" ] }
# Pretty tables in the terminal.
tabled = { version = "0.15.0", features = ["ansi"] }
# Function chaining to avoid needless local variables.
tap = "1.0.1"
# Parse and produce URLs.
url = "2.5.1"
